--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,13 +17,14 @@ build:
 requirements:
   host:
     - python >=3.7
+    - hatchling
     - pip
   run:
     - python >=3.7
-    - cachetools >=3.1.0
-    - python-dateutil >=2.7.5
-    - pytz >=2018.9
     - requests >=2.14.2
+    - python-dateutil >=2.7.5
+    - cachetools >=3.1.0
+    - pytz >=2018.9
     - six >=1.14.0
 
 test:
