--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,7 +17,7 @@ build:
 requirements:
   host:
     - python >=3.7
-    - hatchling
+    - setuptools >=61.0
     - pip
   run:
     - python >=3.7
