Simplify recipe.yaml by removing redundant entries
Removed unnecessary requirements and script sections from recipe.yaml.

--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -34,13 +34,8 @@ tests:
   - python:
       imports:
         - zenpy
+      pip_check: true
       python_version: ${{ python_min }}.*
-  - requirements:
-      run:
-        - python ${{ python_min }}.*
-        - pip
-    script:
-      - pip check
 
 about:
   summary: Python wrapper for the Zendesk API
